src/styles/layout/_snackbar_layout.sass
#snackbar
  align-items: center
  bottom: 64px
  display: grid
  grid-auto-flow: column
  grid-column-gap: ($gutter * 8)
  left: 50%
  padding: ($gutter * 8) ($gutter * 12)
  position: absolute
  transform: translateX(-50%)
  width: fit-content

  .icon
    display: grid

